force-app/main/default/objects/Credit_Card_Transaction__c/Credit_Card_Transaction__c.object-meta.xml
<CustomObject>
    <label>Credit Card Transaction</label>
    <pluralLabel>Credit Card Transactions</pluralLabel>
    <description>Object used to track and manage credit card transactions for dispute reference and transaction history within the banking system.</description>
    <nameField>
        <label>Transaction Number</label>
        <type>AutoNumber</type>
        <displayFormat>TXN-{00000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>