force-app/main/default/objects/Credit_Card_Transaction__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Amount</label>
    <description>The transaction amount in Indian Rupees (INR)</description>
    <inlineHelpText>Enter the transaction amount including any applicable taxes. Use positive values for charges and negative for refunds.</inlineHelpText>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <required>true</required>
</CustomField>