force-app/main/default/objects/Credit_Card_Transaction__c/fields/Financial_Account__c.field-meta.xml
<CustomField>
    <fullName>Financial_Account__c</fullName>
    <label>Financial Account</label>
    <description>Link to the Financial Services Cloud account (credit card) associated with this transaction</description>
    <inlineHelpText>Select the credit card account that this transaction belongs to</inlineHelpText>
    <type>Lookup</type>
    <referenceTo>FinServ__FinancialAccount__c</referenceTo>
    <relationshipLabel>Credit Card Transactions</relationshipLabel>
    <relationshipName>Credit_Card_Transactions</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>