force-app/main/default/objects/Credit_Card_Transaction__c/fields/Is_Disputed__c.field-meta.xml
<CustomField>
    <fullName>Is_Disputed__c</fullName>
    <label>Is Disputed</label>
    <description>Indicates if transaction is disputed</description>
    <inlineHelpText>Check if customer has disputed this transaction</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>