force-app/main/default/objects/Credit_Card_Transaction__c/fields/Merchant_City__c.field-meta.xml
<CustomField>
    <fullName>Merchant_City__c</fullName>
    <label>Merchant City</label>
    <description>City where merchant is located</description>
    <inlineHelpText>Enter the city where the transaction occurred</inlineHelpText>
    <type>Text</type>
    <length>100</length>
</CustomField>