force-app/main/default/objects/Credit_Card_Transaction__c/fields/Merchant_Name__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Name__c</fullName>
    <label>Merchant Name</label>
    <description>The name of the merchant or vendor where the transaction occurred</description>
    <inlineHelpText>Enter the merchant name as it appears on the statement (e.g., Amazon.in, Swiggy, Big Bazaar)</inlineHelpText>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>