force-app/main/default/objects/Credit_Card_Transaction__c/fields/Running_Balance__c.field-meta.xml
<CustomField>
    <fullName>Running_Balance__c</fullName>
    <label>Running Balance</label>
    <description>Running balance after transaction</description>
    <inlineHelpText>Account balance after this transaction was processed</inlineHelpText>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>