force-app/main/default/objects/Credit_Card_Transaction__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <description>The current status of the credit card transaction</description>
    <inlineHelpText>Transaction status: Posted (completed), Pending (processing), or Disputed (under investigation)</inlineHelpText>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Posted</fullName>
                <default>true</default>
                <label>Posted</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Disputed</fullName>
            </value>
            <value>
                <fullName>Reversed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>