force-app/main/default/objects/Credit_Card_Transaction__c/fields/Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Date__c</fullName>
    <label>Transaction Date</label>
    <description>The date and time when the credit card transaction occurred</description>
    <inlineHelpText>Enter the exact date and time of the transaction as it appears on the statement</inlineHelpText>
    <type>DateTime</type>
    <required>true</required>
</CustomField>