force-app/main/default/objects/Credit_Card_Transaction__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <label>Transaction Type</label>
    <description>The type or category of the credit card transaction</description>
    <inlineHelpText>Select the transaction category (Purchase, Cash Withdrawal, Refund, or Fee)</inlineHelpText>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Purchase</fullName>
                <default>true</default>
                <label>Purchase</label>
            </value>
            <value>
                <fullName>Cash Withdrawal</fullName>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>Fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>